[package]
name = "hyperoracle-assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20" }
# tag = "v2023_02_02" }# halo2_proofs = "0.3.0"
# halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_02_02" }
gadgets = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits" }
eth-types = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits" } # rev = "37b8aca" }
